--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
+    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "lightningcss": "^1.31.1",
     "lightningcss-win32-x64-msvc": "^1.31.1",
